# math_ai_visualize

./: .gitignore  README.md  email_preview.html  idea.md  improvement.md  package-lock.json  vercel.json  wrangler.toml
backend/: pyproject.toml
backend/.data/: hinh.db
backend/app/: main.py
backend/app/api/: deps.py  routes_admin.py  routes_ai_models.py  routes_auth.py  routes_health.py  routes_history.py  routes_ocr.py  routes_render.py  routes_settings.py  routes_user_settings.py
backend/app/core/: config.py
backend/app/db/: migrations.py  models.py  session.py
backend/app/renderers/: geogebra_commands.py  three_scene.py
backend/app/repositories/: admin.py  auth.py  history.py  user_settings.py
backend/app/schemas/: auth.py  scene.py
backend/app/services/: ai_prompt.py  email.py  email_template.py  extractor.py  geometry_engine.py  google_oauth.py  model_scan.py  nvidia_client.py  ocr.py  ollama_client.py  openrouter_client.py  provider_logging.py  renderer_router.py  router9_bootstrap.py  router9_client.py  solid_presets.py  system_settings.py
backend/backend/.data/: hinh.db
backend/hinh_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: generate_email_preview.py
backend/tests/: test_ai_provider_fallbacks.py  test_auth_product.py  test_geometry_engine.py  test_ocr.py  test_scene_output_normalization.py  test_settings_defaults.py
docs/: scene-schema.md  supported-problem-types.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vercel.json  (+2 more)
(+34 files in other folders)
