[project]
name = "hinh-backend"
version = "0.1.0"
description = "AI-powered math scene extraction and rendering backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "email-validator>=2.2.0",
  "httpx>=0.27.0",
  "aiosqlite>=0.20.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "backend*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
